[package]
name = "remodel"
version = "0.12.0-uplift.release.13"
description = "A tool to read, modify, and write Roblox objects."
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/rojo-rbx/remodel"
documentation = "https://github.com/rojo-rbx/remodel"
repository = "https://github.com/rojo-rbx/remodel"
readme = "README.md"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

# These dependencies can be uncommented when working on rbx-dom simultaneously
# rbx_binary = { path = "../rbx-dom/rbx_binary" }
# rbx_dom_weak = { path = "../rbx-dom/rbx_dom_weak" }
# rbx_reflection = { path = "../rbx-dom/rbx_reflection" }
# rbx_reflection_database = { path = "../rbx-dom/rbx_reflection_database" }
# rbx_xml = { path = "../rbx-dom/rbx_xml" }

rbx_binary = { git = "https://github.com/UpliftGames/rbx-dom", rev = "af4ba36e50c27b420216c7e473e0abcc8a93f604" } 
rbx_dom_weak = { git = "https://github.com/UpliftGames/rbx-dom", rev = "af4ba36e50c27b420216c7e473e0abcc8a93f604" } 
rbx_reflection = { git = "https://github.com/UpliftGames/rbx-dom", rev = "af4ba36e50c27b420216c7e473e0abcc8a93f604" } 
rbx_reflection_database = { git = "https://github.com/UpliftGames/rbx-dom", rev = "af4ba36e50c27b420216c7e473e0abcc8a93f604" } 
rbx_xml = { git = "https://github.com/UpliftGames/rbx-dom", rev = "af4ba36e50c27b420216c7e473e0abcc8a93f604" } 

anyhow = "1.0.44"
backtrace = "0.3.61"
base64 = "0.13.0"
log = "0.4.14"
rbx_cookie = "0.1.4"
serde = "1.0.130"
serde_with = "2.0.1"
serde_json = "1.0.68"
structopt = "0.3.23"

futures = "0.3.24"

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[dependencies.reqwest]
version = "0.11.12"
features = ["json"]

[dependencies.mlua]
version = "0.8.4"
features = ["luau", "vendored", "async", "serialize"]

[dependencies.env_logger]
version = "0.9.1"
default-features = false
features = ["termcolor", "atty"]
